--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,36 @@
     width:50px;
     background-color: blue;
     display: flex;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     justify-content: center;
+    
 }
+
 
 .container{
     display: flex;
+}
+
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    margin: 0;
+    padding: 0;
+    background-color: black;
+}
+.ball {
+    background-color: #D92525;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-15px);
+}
+.red {
+    background-color: red;
+
 }
